# stegpal

./: LICENSE  Main.hs  README.md  stegpal.cabal
src/BMP/: Bitmap.hs  CIEXYZ.hs  Compression.hs  DIBHeader.hs  FileHeader.hs  Palette.hs  Pixels.hs
src/Binary/: Utils.hs
src/ICO/: DirEntries.hs  IconImages.hs  Icons.hs
src/StegPal/: Analysis.hs  Encoder.hs  Histogram.hs  Magic.hs  RGBAlpha.hs  RGBHist.hs
test/: examples.sh
