name:                   stegpal

version:                0.2.8.0
synopsis:               Data Hiding and Steganography
description:            A toolkit for hiding stuff in BMPs and Icons
license:                BSD3
license-file:           LICENSE
author:                 Rodger Allen
maintainer:             rodger.allen@protonmail.com
copyright:              Rodger Allen 2018
category:               None
build-type:             Simple
cabal-version:          >=1.10

-- -------------------------------------

extra-source-files:     ChangeLog.md
                      , testImgs/www.alchemistowl.org-favicon.ico
                      , testImgs/alchemist.ico

-- -------------------------------------

executable stegpal
  main-is:                Main.hs
  other-modules:          Binary.Utils
                        , BMP.Bitmap
                        , BMP.FileHeader
                        , BMP.DIBHeader
                        , BMP.CIEXYZ
                        , BMP.Compression
                        , BMP.Palette
                        , BMP.Pixels
                        , ICO.Icons
                        , ICO.DirEntries
                        , ICO.IconImages
                        , StegPal.Encoder
                        , StegPal.Histogram
                        , StegPal.RGBHist
                        , StegPal.Magic
                        , StegPal.Analysis
                        , StegPal.RGBAlpha

  build-depends:          base >=4.9 && < 4.11
                        , bytestring >= 0.10
                        , binary >= 0.8
                        , vector >= 0.12
                        , zlib >= 0.6
                        , cryptocipher >= 0.6
                        , text >= 1.2
                        , filepath >= 1.4
                        , cmdargs >= 0.10
                        , bv >= 0.5

  hs-source-dirs:         src
  default-language:       Haskell2010

-- -------------------------------------

library
  hs-source-dirs:         src
  default-language:       Haskell2010
  exposed-modules:        BMP.Bitmap
                        , ICO.Icons
                        , StegPal.Encoder
                        , StegPal.Histogram
                        , StegPal.RGBHist
                        , StegPal.Magic
                        , StegPal.Analysis
                        , StegPal.RGBAlpha

  other-modules:          Binary.Utils
                        , BMP.FileHeader
                        , BMP.DIBHeader
                        , BMP.CIEXYZ
                        , BMP.Compression
                        , BMP.Palette
                        , BMP.Pixels
                        , ICO.DirEntries
                        , ICO.IconImages

  build-depends:          base >=4.9 && < 4.11
                        , bytestring >= 0.10
                        , binary >= 0.8
                        , vector >= 0.12
                        , zlib >= 0.6
                        , cryptocipher >= 0.6
                        , text >= 1.2
                        , bv >= 0.5


-- -------------------------------------
-- vi: et ts=2 ai
